--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@
 			</div>
 		</header>
 		<section class="main">
-			<div class="container container-none">
+			<div class="container">
 				<div class="main__wrapper">
-					<img class="main__img" src="./img/main-bg.png" alt="main" />
 					<div class="main__content">
 						<h1 class="main__title">
 							Best Online Pokies Reviews With Free Demos -
