--- a/index.html
+++ b/index.html
@@ -1349,76 +1349,189 @@
 						Knowledge of providers helps players choose games with the right
 						feel and volatility.
 					</p>
-					<div class="element__provider-focus">
-						<img
-							src="./img/provider/Aristocrat.png"
-							alt="Aristocrat"
-							class="img__provider-focus"
-						/>
-						<div class="content__provider-focus">
-							<h4 class="title-element__provider-focus">Aristocrat Pokies</h4>
-							<p class="text-element__provider-focus">
-								Aristocrat draws on land based heritage. It produces titles that prioritise solid base mechanics and recognisable themes. Many Aristocrat games are optimised for mobile and designed to appeal to players who prefer straightforward gameplay with clear bonus triggers.
-							</p>
+					<div class="block__provider-focus">
+						<div class="element__provider-focus">
+							<img
+								src="./img/provider/Aristocrat.png"
+								alt="Aristocrat"
+								class="img__provider-focus"
+							/>
+							<div class="content__provider-focus">
+								<h4 class="title-element__provider-focus">Aristocrat Pokies</h4>
+								<p class="text-element__provider-focus">
+									Aristocrat draws on land based heritage. It produces titles
+									that prioritise solid base mechanics and recognisable themes.
+									Many Aristocrat games are optimised for mobile and designed to
+									appeal to players who prefer straightforward gameplay with
+									clear bonus triggers.
+								</p>
+							</div>
+						</div>
+
+						<div class="element__provider-focus">
+							<img
+								src="./img/provider/BGaming.png"
+								alt="BGaming"
+								class="img__provider-focus"
+							/>
+							<div class="content__provider-focus">
+								<h4 class="title-element__provider-focus">BGaming Pokies</h4>
+								<p class="text-element__provider-focus">
+									BGaming targets mobile first design and player centric
+									features. It experiments with adjustable volatility and
+									fractional betting. These tools are helpful for players
+									managing small bankrolls or those who want fine control over
+									stake sizes.
+								</p>
+							</div>
+						</div>
+
+						<div class="element__provider-focus">
+							<img
+								src="./img/provider/Playson.png"
+								alt="Playson"
+								class="img__provider-focus"
+							/>
+							<div class="content__provider-focus">
+								<h4 class="title-element__provider-focus">Playson Pokies</h4>
+								<p class="text-element__provider-focus">
+									Playson is known for efficient, feature rich video pokies that
+									are optimised for fast load times. Their portfolio includes
+									balanced bonus mechanics and a sensible mix of volatility
+									profiles.
+								</p>
+							</div>
+						</div>
+
+						<div class="element__provider-focus">
+							<img
+								src="./img/provider/NetEnt.png"
+								alt="NetEnt"
+								class="img__provider-focus"
+							/>
+							<div class="content__provider-focus">
+								<h4 class="title-element__provider-focus">NetEnt Pokies</h4>
+								<p class="text-element__provider-focus">
+									NetEnt is a veteran studio with high production values. Titles
+									by NetEnt are typically polished and reliable in RTP
+									disclosure. NetEnt’s catalogue is often a core part of
+									reputable online casino libraries.
+								</p>
+							</div>
+						</div>
+
+						<div class="element__provider-focus">
+							<img
+								src="./img/provider/Pragmatic.png"
+								alt="Pragmatic"
+								class="img__provider-focus"
+							/>
+							<div class="content__provider-focus">
+								<h4 class="title-element__provider-focus">Pragmatic Pokies</h4>
+								<p class="text-element__provider-focus">
+									Pragmatic Play publishes a large volume of titles with high
+									variance features. Their slots are designed for impact and
+									often include volatile bonus rounds. Pragmatic Play is also a
+									major supplier of live casino content.
+								</p>
+							</div>
 						</div>
 					</div>
-
-					<div class="element__provider-focus">
-						<img
-							src="./img/provider/BGaming.png"
-							alt="BGaming"
-							class="img__provider-focus"
-						/>
-						<div class="content__provider-focus">
-							<h4 class="title-element__provider-focus">BGaming Pokies</h4>
-							<p class="text-element__provider-focus">
-								BGaming targets mobile first design and player centric features. It experiments with adjustable volatility and fractional betting. These tools are helpful for players managing small bankrolls or those who want fine control over stake sizes.
-							</p>
-						</div>
+					<div class="why__provider-focus">
+						<h4 class="title-why__provider-focus">Why provider diversity matters</h4>
+						<p class="text-why__provider-focus">
+							Different providers deliver different volatility mixes, bonus designs and presentation styles. A casino that lists Aristocrat, NetEnt, Pragmatic Play, Playson and BGaming is more likely to satisfy a wide range of players. We flag provider lineups in every casino review so players can filter based on their preferred studios.
+						</p>
 					</div>
-
-					<div class="element__provider-focus">
-						<img
-							src="./img/provider/Playson.png"
-							alt="Playson"
-							class="img__provider-focus"
-						/>
-						<div class="content__provider-focus">
-							<h4 class="title-element__provider-focus">Playson Pokies</h4>
-							<p class="text-element__provider-focus">
-								Playson is known for efficient, feature rich video pokies that are optimised for fast load times. Their portfolio includes balanced bonus mechanics and a sensible mix of volatility profiles.
-							</p>
-						</div>
+				</div>
+			</div>
+		</section>
+				<section class="text-block">
+			<div class="container">
+				<h3 class="main-title__text-block">Finding the best online casinos in Australia</h3>
+				<p class="main-text__text-block">
+					The phrase best online casinos in Australia is common among players searching for safe, valuable sites. Our selection criteria focus on trust and player benefit rather than marketing.
+				</p>
+				<div class="wrapper__text-block wrapper-blue-text-block">
+					<h3 class="title__text-block">Minimum standards we require:</h3>
+					<div class="block-mark__text-block">
+						<img src="./img/check-mark.svg" alt="" />
+						<p>
+							<strong>A valid licence</strong> from a recognised regulator and clear operator details.
+						</p>
 					</div>
-
-					<div class="element__provider-focus">
-						<img
-							src="./img/provider/NetEnt.png"
-							alt="NetEnt"
-							class="img__provider-focus"
-						/>
-						<div class="content__provider-focus">
-							<h4 class="title-element__provider-focus">NetEnt Pokies</h4>
-							<p class="text-element__provider-focus">
-								NetEnt is a veteran studio with high production values. Titles by NetEnt are typically polished and reliable in RTP disclosure. NetEnt’s catalogue is often a core part of reputable online casino libraries.
-							</p>
-						</div>
+					<div class="block-mark__text-block">
+						<img src="./img/check-mark.svg" alt="" />
+						<p>
+							<strong>Transparent bonus terms</strong> and fair wagering requirements.
+						</p>
 					</div>
-
-					<div class="element__provider-focus">
-						<img
-							src="./img/provider/Pragmatic.png"
-							alt="Pragmatic"
-							class="img__provider-focus"
-						/>
-						<div class="content__provider-focus">
-							<h4 class="title-element__provider-focus">Pragmatic Pokies</h4>
-							<p class="text-element__provider-focus">
-								Pragmatic Play publishes a large volume of titles with high variance features. Their slots are designed for impact and often include volatile bonus rounds. Pragmatic Play is also a major supplier of live casino content.
-						</div>
+					<div class="block-mark__text-block">
+						<img src="./img/check-mark.svg" alt="" />
+						<p>
+							<strong>Multiple reliable payment methods</strong> that give Australian players predictable deposit and withdrawal experience.
+						</p>
 					</div>
-
-
+					<div class="block-mark__text-block">
+						<img src="./img/check-mark.svg" alt="" />
+						<p>
+							<strong>Strong provider mix</strong> including names such as Aristocrat, NetEnt, Pragmatic Play, Playson and BGaming.
+						</p>
+					</div>
+					<div class="block-mark__text-block">
+						<img src="./img/check-mark.svg" alt="" />
+						<p>
+							<strong>Evidence of RNG </strong> testing or third party audits.
+						</p>
+					</div>
+					<div class="block-mark__text-block">
+						<img src="./img/check-mark.svg" alt="" />
+						<p>
+							<strong>Responsible gaming tools</strong> that meet modern standards.
+						</p>
+					</div>
+				</div>
+				<p class="bottom-text__text-block">
+					Extra value factors include curated lists, localised support and mobile app availability. Operators with clear, consistent promotions such as Rocketplay Casino, Sky Crown and Win Spirit are flagged for further review when they meet compliance and fairness standards. We verify claim strings on their sites and check for geographic restrictions that might affect Australian players.
+				</p>
+			</div>
+		</section>
+		<section class="text-block">
+			<div class="container">
+				<div class="wrapper__text-block">
+					<h3 class="title__text-block">Responsible Gambling and Player Protection</h3>
+					<p class="text__text-block">
+						Player protection is a core evaluation area. We look for:
+					</p>
+					<ul class="list-dot__text-block">
+						<li class="item__text-block">
+							Deposit limits and loss limits.
+						</li>
+						<li class="item__text-block">
+							Session reminders and time out tools.
+						</li>
+						<li class="item__text-block">
+							Self exclusion and cooling off facilities.
+						</li>
+						<li class="item__text-block">
+							Links to independent support organisations and helplines.
+						</li>
+					</ul>
+					<p class="text__text-block">
+						We also publish educational material about problem gambling and how to recognise warning signs. Every Australian online casino review includes clear links to resources and an assessment of the operator’s proactive approach to harm minimisation.
+					</p>
+				</div>
+			</div>
+		</section>
+		<section class="practical">
+			<div class="container">
+				<div class="practical__wrapper">
+					<h3 class="practical__title">
+						Practical tips for Australian players
+					</h3>
+					<p class="practical__text">
+						Below are actionable tips derived from testing and industry practice.
+					</p>
 				</div>
 			</div>
 		</section>
