--- a/index.html
+++ b/index.html
@@ -1532,6 +1532,69 @@
 					<p class="practical__text">
 						Below are actionable tips derived from testing and industry practice.
 					</p>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M11 10.1384V6H18V25H13.5018V10.1384H11Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Start in demo mode</strong> to learn a game’s mechanics and bonus triggers.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="32" viewBox="0 0 30 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="17" r="15" fill="#FFD700"/>
+							<path d="M9.05159 22.7215C9.63624 22.2568 9.90278 22.0417 9.85119 22.0761C11.5364 20.6821 12.8604 19.5376 13.8234 18.6427C14.8036 17.7477 15.629 16.8098 16.2996 15.8288C16.9702 14.8478 17.3056 13.8927 17.3056 12.9633C17.3056 12.2577 17.1422 11.707 16.8155 11.3111C16.4888 10.9153 15.9987 10.7174 15.3452 10.7174C14.6918 10.7174 14.1759 10.9669 13.7976 11.466C13.4365 11.9479 13.256 12.6363 13.256 13.5313H9C9.03439 12.0684 9.34392 10.8465 9.92857 9.86549C10.5304 8.88451 11.3128 8.16168 12.2758 7.69701C13.256 7.23234 14.3393 7 15.5258 7C17.5721 7 19.1111 7.52491 20.1429 8.57473C21.1918 9.62455 21.7163 10.9928 21.7163 12.6793C21.7163 14.5208 21.0886 16.2332 19.8333 17.8166C18.578 19.3827 16.9788 20.9144 15.0357 22.4117H22V26H9.05159V22.7215Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Check RTP and volatility.</strong> Match volatility to your bankroll and desired play session length.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="32" viewBox="0 0 30 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="17" r="15" fill="#FFD700"/>
+							<path d="M8.84785 13.2284C8.91084 11.4285 9.46203 10.0407 10.5014 9.06504C11.5408 8.08939 12.9502 7.60156 14.7297 7.60156C15.9108 7.60156 16.9187 7.82024 17.7534 8.25761C18.6038 8.69497 19.2416 9.29213 19.6667 10.0491C20.1077 10.8061 20.3282 11.6556 20.3282 12.5976C20.3282 13.7078 20.0683 14.6162 19.5486 15.3227C19.029 16.0124 18.4227 16.4834 17.7297 16.7357V16.8366C18.6274 17.1562 19.336 17.6861 19.8557 18.4263C20.3754 19.1664 20.6353 20.1168 20.6353 21.2775C20.6353 22.3205 20.4069 23.2457 19.9502 24.0531C19.5093 24.8437 18.8557 25.4661 17.9896 25.9203C17.1392 26.3745 16.1234 26.6016 14.9423 26.6016C13.0526 26.6016 11.5408 26.1053 10.4069 25.1129C9.2888 24.1204 8.69825 22.6233 8.63525 20.6215H12.5565C12.5723 21.3616 12.7691 21.9504 13.1471 22.3878C13.525 22.8083 14.0762 23.0186 14.8006 23.0186C15.4148 23.0186 15.8872 22.8335 16.2179 22.4634C16.5644 22.0766 16.7376 21.5719 16.7376 20.9495C16.7376 20.1421 16.4935 19.5617 16.0053 19.2085C15.5329 18.8384 14.7691 18.6534 13.714 18.6534H12.9581V15.1461H13.714C14.5171 15.1461 15.1628 15.0031 15.651 14.7171C16.1549 14.4143 16.4069 13.8844 16.4069 13.1275C16.4069 12.5219 16.2494 12.0509 15.9345 11.7144C15.6195 11.378 15.1864 11.2098 14.6353 11.2098C14.0368 11.2098 13.588 11.4032 13.2888 11.7901C13.0053 12.177 12.84 12.6565 12.7927 13.2284H8.84785Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Read bonus terms carefully.</strong> Note wagering, contribution rates and maximum cashout caps. <strong>Check RTP and volatility.</strong> Match volatility to your bankroll and desired play session length.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="32" viewBox="0 0 30 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="17" r="15" fill="#FFD700"/>
+							<path d="M6 23.5694V19.9278L14.584 8H19.7725V19.6639H22V23.5694H19.7725V27H15.1273V23.5694H6ZM15.4533 12.9611L10.8896 19.6639H15.4533V12.9611Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Use the operator’s responsible gaming tools.</strong> Set deposit and loss limits before you play.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M20.8627 9.89877H12.4139V13.4856C12.775 13.1044 13.2805 12.7925 13.9304 12.5499C14.5803 12.3073 15.2843 12.186 16.0426 12.186C17.3965 12.186 18.5158 12.4806 19.4004 13.0698C20.303 13.6589 20.962 14.4213 21.3772 15.357C21.7924 16.2928 22 17.3064 22 18.3981C22 20.4254 21.4043 22.0369 20.2128 23.2326C19.0213 24.4109 17.3424 25 15.176 25C13.7318 25 12.4771 24.7661 11.412 24.2982C10.3469 23.813 9.52547 23.1459 8.94778 22.2969C8.37008 21.4478 8.05416 20.4688 8 19.3598H12.5222C12.6306 19.8969 12.8923 20.3475 13.3075 20.7114C13.7228 21.0579 14.2914 21.2312 15.0135 21.2312C15.862 21.2312 16.4939 20.9713 16.9091 20.4514C17.3243 19.9316 17.5319 19.2385 17.5319 18.3721C17.5319 17.523 17.3153 16.8732 16.882 16.4227C16.4487 15.9722 15.8169 15.7469 14.9865 15.7469C14.3727 15.7469 13.8672 15.8942 13.47 16.1888C13.0729 16.466 12.8111 16.8386 12.6847 17.3064H8.21663V6H20.8627V9.89877Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Verify the operator’s licence and third party audits.</strong> If a site does not show this information, treat it with caution.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="32" viewBox="0 0 30 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="17" r="15" fill="#FFD700"/>
+							<path d="M17.2084 13.3778C17.0656 12.7521 16.8158 12.2871 16.4589 11.9826C16.102 11.6613 15.5934 11.5007 14.9331 11.5007C13.9159 11.5007 13.1842 11.9235 12.738 12.769C12.2919 13.5977 12.0599 14.9168 12.0421 16.7263C12.4347 16.1344 12.9968 15.6693 13.7285 15.3311C14.478 14.9929 15.2989 14.8238 16.1912 14.8238C17.9401 14.8238 19.341 15.348 20.3939 16.3965C21.4646 17.445 22 18.9079 22 20.785C22 22.0196 21.7323 23.1019 21.1969 24.032C20.6794 24.9622 19.912 25.6894 18.8948 26.2136C17.8955 26.7379 16.7087 27 15.3346 27C12.5864 27 10.6769 26.1883 9.60612 24.5648C8.53537 22.9243 8 20.5737 8 17.5127C8 14.2995 8.56214 11.915 9.68642 10.3591C10.8286 8.78638 12.6488 8 15.1472 8C16.4857 8 17.6099 8.25367 18.5201 8.76102C19.4481 9.25145 20.144 9.90254 20.608 10.7143C21.0899 11.526 21.3754 12.4139 21.4646 13.3778H17.2084ZM15.0937 18.2483C14.3263 18.2483 13.6839 18.4682 13.1663 18.9079C12.6667 19.3307 12.4168 19.9395 12.4168 20.7343C12.4168 21.5461 12.6488 22.1802 13.1128 22.6369C13.5946 23.0935 14.2728 23.3218 15.1472 23.3218C15.9324 23.3218 16.5481 23.1019 16.9943 22.6622C17.4583 22.2056 17.6902 21.5883 17.6902 20.8104C17.6902 20.0156 17.4672 19.3899 17.021 18.9332C16.5749 18.4766 15.9324 18.2483 15.0937 18.2483Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Test a small withdrawal early</strong> to confirm identity verification and payout speed.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="32" viewBox="0 0 30 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="17" r="15" fill="#FFD700"/>
+							<path d="M22.3545 11.5249L15.5988 27.2148H10.8887L17.7251 12.0201H9.35449V8.21484H22.3545V11.5249Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Choose providers you trust.</strong>  If you enjoy a certain game style, look for casinos that list Aristocrat, NetEnt or Pragmatic Play in their catalogue.
+						</p>
+					</div>
 				</div>
 			</div>
 		</section>
