--- a/index.html
+++ b/index.html
@@ -1598,6 +1598,47 @@
 				</div>
 			</div>
 		</section>
+			<section class="text-block">
+			<div class="container">
+				<div class="wrapper__text-block">
+					<h3 class="title__text-block">Example operator mentions and what to check</h3>
+					<p class="text__text-block">
+						We frequently encounter operators with strong marketing presence. Examples include Rocketplay Casino, Sky Crown and Win Spirit. When these brands appear in our coverage we verify:
+					</p>
+					<ul class="list-dot__text-block">
+						<li class="item__text-block">
+							Licence and regulator details.
+						</li>
+						<li class="item__text-block">
+							Whether their welcome bonuses for online pokies players are fairly structured.
+						</li>
+						<li class="item__text-block">
+							If their game library includes major providers such as NetEnt, Pragmatic Play, Playson, BGaming and Aristocrat
+						</li>
+						<li class="item__text-block">
+							How they handle verification and withdrawals for Australian players.
+						</li>
+					</ul>
+					<p class="text__text-block last-text-block">
+						We list exact terms and provide a short recommendation for the typical Australian player profile.
+					</p>
+					<h3 class="title__text-block">How to use Pokies24.io effectively</h3>
+					<p class="text__text-block">
+						If you want the fastest route to a good decision use our filters. Select the desired RTP or volatility bracket, choose preferred providers, and compare the bonus terms side by side. Use demo play to confirm game feel and test a withdrawal with a small amount to establish trust with the operator.
+					</p>
+					<p class="text__text-block last-text-block">
+						If you prefer a hand curated list, check our best online casinos in Australia page for operators that meet our minimum standards and deliver value for pokies players.
+					</p>
+					<h3 class="title__text-block">Closing summary</h3>
+					<p class="text__text-block">
+						Pokies24.io provides evidence based pokie reviews, thorough Australian online casino reviews and transparent bonus alerts. We track providers such as Aristocrat, BGaming, Playson, NetEnt and Pragmatic Play and we test popular titles including Big Bass Bonanza to give players practical insight into volatility, RTP and bonus mechanics. We verify promotions including no deposit bonuses and free spins and present clear calculations that show the real value of offers.
+					</p>
+					<p class="text__text-block">
+						If you plan to play pokies online for free or for real money, start with demo play and use our provider and casino filters to match games to your bankroll. Check licence information, confirm payment and withdrawal pathways, and use responsible gaming tools to control play. For targeted recommendations we can prepare a shortlist that compares RTP, wagering requirements and withdrawal speed for sites such as Rocketplay Casino, Sky Crown and Win Spirit. Our reviews are designed to be practical and transparent so you can make a confident, informed choice.
+					</p>
+				</div>
+			</div>
+		</section>
 
 		<section class="providers">
 			<div class="container">
