add functional popup

--- a/index.html
+++ b/index.html
@@ -218,8 +218,17 @@
 						</svg>
 						<span>Claim Gift</span>
 					</button>
+					<div class="header__popup">
+						<button class="header__popup-close-btn">
+							<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="15.2485" height="1.69427" rx="0.847137" transform="matrix(0.706154 -0.708059 0.706154 0.708059 0 10.7968)" />
+								<rect width="15.2485" height="1.69427" rx="0.847137" transform="matrix(-0.706154 -0.708059 0.706154 -0.708059 10.8036 12.0003)"/>
+							</svg>
+						</button>
+					</div>
 				</div>
 			</div>
+
 		</header>
 		<section class="main">
 			<div class="container">
@@ -1769,6 +1778,7 @@
 		<section class="faq section" id="faq">
 			<div class="container">
 				<div class="faq__wrapper">
+					<h3 class="faq__title">Frequently Asked Questions</h3>
 					<div class="faq__accordion-container">
 						<div class="faq__accordion">
 							<button class="faq__menu-button">
@@ -2279,5 +2289,6 @@
 		<script type="module" src="./js/main.js"></script>
 		<script type="module" src="./js/email.js"></script>
 		<script type="module" src="./js/list.js"></script>
+		<script type="module" src="./js/clickBanner.js"></script>
 	</body>
 </html>
