--- a/index.html
+++ b/index.html
@@ -174,7 +174,18 @@
 					<nav class="header__nav">
 						<ul class="header__list">
 							<li class="header__item active">Home</li>
-							<li class="header__item">Free Pokies</li>
+							<li class="header__item">
+								Free Pokies
+								<ul class="header__sublist">
+									<li class="header__subitem">New Pokies</li>
+									<li class="header__subitem">Popular Pokies</li>
+									<li class="header__subitem">Pokies by Provider</li>
+									<li class="header__subitem">Table Games</li>
+									<li class="header__subitem">Live Dealer</li>
+									<li class="header__subitem">Virtual</li>
+									<li class="header__subitem">Crash Pokies</li>
+								</ul>
+							</li>
 							<li class="header__item">Online Casinos</li>
 							<li class="header__item">about us</li>
 							<li class="header__item">Contact</li>
