--- a/index.html
+++ b/index.html
@@ -173,22 +173,78 @@
 					</a>
 					<nav class="header__nav">
 						<ul class="header__list">
-							<li class="header__item active">Home</li>
+							<li class="header__item active">
+								<a href="#">Home</a>
+							</li>
 							<li class="header__item">
-								Free Pokies
+								<a href="#">Free Pokies</a>
 								<ul class="header__sublist">
-									<li class="header__subitem">New Pokies</li>
-									<li class="header__subitem">Popular Pokies</li>
-									<li class="header__subitem">Pokies by Provider</li>
-									<li class="header__subitem">Table Games</li>
-									<li class="header__subitem">Live Dealer</li>
-									<li class="header__subitem">Virtual</li>
-									<li class="header__subitem">Crash Pokies</li>
+									<li class="header__subitem">
+										<a href="#">New Pokies</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Popular Pokies</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Pokies by Provider</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Table Games</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Live Dealer</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Virtual</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Crash Pokies</a>
+									</li>
 								</ul>
 							</li>
-							<li class="header__item">Online Casinos</li>
-							<li class="header__item">about us</li>
-							<li class="header__item">Contact</li>
+							<li class="header__item">
+								<a href="#">Online Casinos</a>
+								<ul class="header__sublist">
+									<li class="header__subitem">
+										<a href="#">Recommended</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Mobile apps casino</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Best live Casinos</a>
+									</li>
+									<li class="header__subitem">
+										<a href="#">Payment Methods 
+											<svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<line x1="1" y1="8.58579" x2="4.58585" y2="4.99993"  stroke-width="2" stroke-linecap="round"/>
+												<line x1="1" y1="-1" x2="6.07116" y2="-1" transform="matrix(0.707107 0.707107 0.707107 -0.707107 1 0)"stroke-width="2" stroke-linecap="round"/>
+											</svg>
+										</a>
+										<ul class="header__underlist">
+											<li class="header__underitem">
+												<a href="#">PayId</a>
+											</li>
+											<li class="header__underitem">
+												<a href="#">Credit cards</a>
+											</li>
+											<li class="header__underitem">
+												<a href="#">Crypto</a>
+											</li>
+											<li class="header__underitem">
+												<a href="#">Neosurf</a>
+											</li>
+										</ul>
+									</li>
+									
+								</ul>
+							</li>
+							<li class="header__item">
+								<a href="#">About Us</a>
+							</li>
+							<li class="header__item">
+								<a href="#">Contact</a>
+							</li>
 						</ul>
 					</nav>
 					<button class="header__btn">
