--- a/index.html
+++ b/index.html
@@ -1709,7 +1709,7 @@
 						<div class="faq__accordion">
 							<button class="faq__menu-button">
 								Can Australians play online pokies legally?
-								<svg class="icon" width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg class="icon" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M9.19678 11L0.397405 0.5L17.9962 0.500002L9.19678 11Z" />
 								</svg>
 
@@ -1724,7 +1724,7 @@
 						<div class="faq__accordion">
 							<button class="faq__menu-button">
 								What is the difference between demo play and real money play?
-								<svg class="icon" width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg class="icon" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M9.19678 11L0.397405 0.5L17.9962 0.500002L9.19678 11Z" />
 								</svg>
 							</button>
@@ -1737,7 +1737,7 @@
 						<div class="faq__accordion">
 							<button class="faq__menu-button">
 								Are free spins truly free?
-								<svg class="icon" width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg class="icon" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M9.19678 11L0.397405 0.5L17.9962 0.500002L9.19678 11Z" />
 								</svg>
 							</button>
@@ -1750,7 +1750,7 @@
 						<div class="faq__accordion">
 							<button class="faq__menu-button">
 								How important is RTP?
-								<svg class="icon" width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg class="icon" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M9.19678 11L0.397405 0.5L17.9962 0.500002L9.19678 11Z" />
 								</svg>
 							</button>
