--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="text-block">
+		<section class="text-block section">
 			<div class="container">
 				<div class="wrapper__text-block">
 					<h3 class="title__text-block">How Pokies24.io tests pokies</h3>
@@ -689,7 +689,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="why-demo">
+		<section class="why-demo section">
 			<div class="container">
 				<div class="wrapper__why-demo">
 					<h3 class="title__why-demo">Why play pokies in demo mode?</h3>
@@ -717,7 +717,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="real-money">
+		<section class="real-money section">
 			<div class="container">
 				<div class="wrapper__real-money">
 					<h3 class="title__real-money">
@@ -949,7 +949,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="bonuses">
+		<section class="bonuses section">
 			<div class="container">
 				<div class="bonuses__wrapper">
 					<h3 class="bonuses__title">Casino bonuses explained and verified</h3>
@@ -1217,7 +1217,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="text-block">
+		<section class="text-block section">
 			<div class="container">
 				<div class="wrapper__text-block">
 					<h3 class="title__text-block">How we verify a bonus:</h3>
@@ -1255,7 +1255,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="provider-focus">
+		<section class="provider-focus section">
 			<div class="container">
 				<div class="wrapper__provider-focus">
 					<h3 class="title__provider-focus">
@@ -1369,7 +1369,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="text-block">
+		<section class="text-block section">
 			<div class="container">
 				<h3 class="main-title__text-block">
 					Finding the best online casinos in Australia
@@ -1433,7 +1433,7 @@
 				</p>
 			</div>
 		</section>
-		<section class="text-block">
+		<section class="text-block section">
 			<div class="container">
 				<div class="wrapper__text-block">
 					<h3 class="title__text-block">
@@ -1463,7 +1463,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="practical">
+		<section class="practical section">
 			<div class="container">
 				<div class="practical__wrapper">
 					<h3 class="practical__title">
@@ -1562,7 +1562,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="text-block">
+		<section class="text-block section">
 			<div class="container">
 				<div class="wrapper__text-block">
 					<h3 class="title__text-block">
@@ -1630,7 +1630,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="faq">
+		<section class="faq section">
 			<div class="container">
 				<div class="faq__wrapper">
 					<h3 class="faq__title">Frequently Asked Questions</h3>
