--- a/index.html
+++ b/index.html
@@ -145,12 +145,15 @@
 						</button>
 					</div>
 					<div class="header__popup">
+						<div class="header__popup-content">
+						<img src="./img/popap-welcome.png" alt="" />
 						<button class="header__popup-close-btn">
 							<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<rect width="15.2485" height="1.69427" rx="0.847137" transform="matrix(0.706154 -0.708059 0.706154 0.708059 0 10.7968)" />
 								<rect width="15.2485" height="1.69427" rx="0.847137" transform="matrix(-0.706154 -0.708059 0.706154 -0.708059 10.8036 12.0003)"/>
 							</svg>
 						</button>
+						</div>
 					</div>
 				</div>
 			</div>
