--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
 					</div>
 				</div>
 			</div>
-
 		</header>
 		<section class="main">
 			<div class="container">
@@ -2144,9 +2143,35 @@
 				</div>
 			</div>
 		</footer>
+		<div class="header__menu-mobile">
+						<div class="heder__line-menu-mobile">
+							<button class="header__back-menu-mobile">
+							<svg width="9" height="16" viewBox="0 0 9 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<line x1="8" y1="1.41421" x2="1.41421" y2="8" stroke="#FFD700" stroke-width="2" stroke-linecap="round"/>
+								<line x1="1" y1="-1" x2="10.3137" y2="-1" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 8 16)" stroke="#FFD700" stroke-width="2" stroke-linecap="round"/>
+							</svg>
+							</button>
+							<span class="header__title-menu-mobile">Free Pokies</span>
+							<button class="header__close-menu-mobile">
+								<svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M10.8403 25.4094L25.1592 11.0905" stroke="#FFD700" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+									<path d="M25.1592 25.4094L10.8403 11.0905" stroke="#FFD700" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+								</svg>
+							</button>
+						</div>
+						<nav class="header__menu-mobile-content">
+							<ul class="header__list-mobile-content">
+								<li><a href="#">Home</a></li>
+								<li><a href="#">Home</a></li>
+								<li><a href="#">Home</a></li>
+								<li><a href="#">Home</a></li>
+							</ul>
+						</nav>
+					</div>
 		<script type="module" src="./js/main.js"></script>
 		<script type="module" src="./js/email.js"></script>
 		<script type="module" src="./js/list.js"></script>
 		<script type="module" src="./js/clickBanner.js"></script>
+		<script type="module" src="./js/list-mobile.js"></script>
 	</body>
 </html>
