--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- <section class="sliders">
+		<section class="sliders">
 			<div class="container">
 				<div class="sliders__wrapper">
 					<div class="sliders__content">
@@ -217,7 +217,7 @@
 							</div>
 							<div class="slider__line-right">
 								<a href="#">VIEW ALL</a>
-								<button class="slider__btn btn left">
+								<button class="slider__btn slider-btn-left">
 									<svg
 										width="28"
 										height="32"
@@ -253,7 +253,7 @@
 										/>
 									</svg>
 								</button>
-								<button class="slider__btn btn right">
+								<button class="slider__btn slider-btn-right">
 									<svg
 										width="28"
 										height="32"
@@ -292,7 +292,7 @@
 								</button>
 							</div>
 						</div>
-						<div class="sliders__content slider-wrapper">
+						<div class="slider-wrapper">
 							<div class="slider-track">
 								<div class="slide"><img src="./img/slide/slide.png" alt="" /></div>
                                 <div class="slide"><img src="./img/slide/slide2.png" alt="" /></div>
@@ -300,15 +300,16 @@
                                 <div class="slide"><img src="./img/slide/slide4.png" alt="" /></div>
                                 <div class="slide"><img src="./img/slide/slide5.png" alt="" /></div>
                                 <div class="slide"><img src="./img/slide/slide6.png" alt="" /></div>
-                                
+
+								<div class="slide"><img src="./img/slide/slide.png" alt="" /></div>
                                 <div class="slide"><img src="./img/slide/slide2.png" alt="" /></div>
-                                <div class="slide"><img src="./img/slide/slide3.png" alt="" /></div>
+                            
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 		<section class="category section">
 			<div class="container">
 				<div class="category__wrapper">
@@ -2169,6 +2170,7 @@
 						</nav>
 					</div>
 		<script type="module" src="./js/main.js"></script>
+		<script type="module" src="./js/slider.js"></script>
 		<script type="module" src="./js/email.js"></script>
 		<script type="module" src="./js/list.js"></script>
 		<script type="module" src="./js/clickBanner.js"></script>
