--- a/index.html
+++ b/index.html
@@ -299,23 +299,192 @@
 										<h3 class="slider__info-title">
 											BEE KEEPER
 										</h3>
-										<div class="slider__info-text"><span>RTP:</span>96.5%</div>
-										<div class="slider__info-text"><span>Min Bet:</span>$10</div>
-										<div class="slider__info-text"><span>Provider:</span>Aristocrat</div>
-										<div class="slider__info-text"><span>Volatility:</span>High</div>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
 										<div class="slider__info-line">
 											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
 											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
 										</div>
 									</div>
 								</div>
-                                <div class="slide"><img src="./img/slide/slide2.png" alt="" /></div>
-                                <div class="slide"><img src="./img/slide/slide3.png" alt="" /></div>
-                                <div class="slide"><img src="./img/slide/slide4.png" alt="" /></div>
-                                <div class="slide"><img src="./img/slide/slide5.png" alt="" /></div>
-                                <div class="slide"><img src="./img/slide/slide6.png" alt="" /></div>
-								<div class="slide"><img src="./img/slide/slide.png" alt="" /></div>
-                                <div class="slide"><img src="./img/slide/slide2.png" alt="" /></div>
+                                <div class="slide">
+									<img src="./img/slide/slide2.png" alt="" />
+									<div class="slider__info">
+										<h3 class="slider__info-title">
+											BEE KEEPER
+										</h3>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
+										<div class="slider__info-line">
+											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
+											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+										</div>
+									</div>
+								</div>
+                                <div class="slide">
+									<img src="./img/slide/slide3.png" alt="" />
+									<div class="slider__info">
+										<h3 class="slider__info-title">
+											BEE KEEPER
+										</h3>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
+										<div class="slider__info-line">
+											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
+											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+										</div>
+									</div>
+								</div>
+                                <div class="slide">
+									<img src="./img/slide/slide4.png" alt="" />
+									<div class="slider__info">
+										<h3 class="slider__info-title">
+											BEE KEEPER
+										</h3>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
+										<div class="slider__info-line">
+											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
+											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+										</div>
+									</div>
+								</div>
+                                <div class="slide">
+									<img src="./img/slide/slide5.png" alt="" />
+									<div class="slider__info">
+										<h3 class="slider__info-title">
+											BEE KEEPER
+										</h3>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
+										<div class="slider__info-line">
+											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
+											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+										</div>
+									</div>
+								</div>
+                                <div class="slide">
+									<img src="./img/slide/slide6.png" alt="" />
+									<div class="slider__info">
+										<h3 class="slider__info-title">
+											BEE KEEPER
+										</h3>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
+										<div class="slider__info-line">
+											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
+											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+										</div>
+									</div>
+								</div>
+								<div class="slide">
+									<img src="./img/slide/slide.png" alt="" />
+									<div class="slider__info">
+										<h3 class="slider__info-title">
+											BEE KEEPER
+										</h3>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
+										<div class="slider__info-line">
+											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
+											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+										</div>
+									</div>
+								</div>
+                                <div class="slide">
+									<img src="./img/slide/slide2.png" alt="" />
+									<div class="slider__info">
+										<h3 class="slider__info-title">
+											BEE KEEPER
+										</h3>
+										<div class="slider__info-text">
+											<span>RTP:</span>96.5%
+										</div>
+										<div class="slider__info-text">
+											<span>Min Bet:</span>$10
+										</div>
+										<div class="slider__info-text">
+											<span>Provider:</span>Aristocrat
+										</div>
+										<div class="slider__info-text">
+											<span>Volatility:</span>High
+										</div>
+										<div class="slider__info-line">
+											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
+											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
